# cli-hearthstone

./: DESIGN.md  README.md  cards.json  hearthstone-rl-plan.md  play.sh  pyproject.toml
decks/: mage_test.json  test.json  test_deck.json
scripts/: import_cards.py
src/hsrl/agents/: base.py  human_agent.py  random_agent.py
src/hsrl/cards/: registry.py
src/hsrl/cards/sets/: basic.py
src/hsrl/cli/: cards.py  deck_manager.py  play.py  renderer.py
src/hsrl/core/: actions.py  card.py  effects.py  enums.py  events.py  game.py  minion.py  player.py  weapon.py
src/hsrl/rl/: action_space.py  env.py  observation.py
tests/: utils.py
tests/test_core/: test_combat.py  test_draw.py  test_effects.py  test_game.py
tests/test_rl/: test_env.py
