[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-hearthstone"
version = "0.1.0"
description = "A CLI Hearthstone simulator suitable for reinforcement learning"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic",
    "rich",
    "gymnasium",
    "numpy"
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
hs-play = "hsrl.cli.play:main"
